Add Wharf build listing endpoint
