# http_api.go
@@ -235,6 +235,7 @@ func registerWharfRoutes(api huma.API, db models.Database, wharfHandlers *handle
 	registerRaw[wharfStatusResponse](api, authOperation("get-wharf-status", http.MethodGet, "/wharf/status", "Check Wharf-compatible API status", "Wharf", 401), authHandler(db, wharfHandlers.GetWharfStatus))
 	registerRaw[channelMapResponse](api, authOperation("list-wharf-channels", http.MethodGet, "/wharf/channels", "List channels for a target game", "Wharf", 400, 401, 403, 404), authHandler(db, wharfHandlers.ListChannels), queryParam("target", "Target in username/game form", true))
 	registerRaw[channelEnvelopeResponse](api, authOperation("get-wharf-channel", http.MethodGet, "/wharf/channels/{channel}", "Get one channel for a target game", "Wharf", 400, 401, 403, 404), authHandler(db, wharfHandlers.GetChannel), queryParam("target", "Target in username/game form", true))
+	registerRaw[buildListResponse](api, authOperation("list-wharf-builds", http.MethodGet, "/wharf/builds", "List builds for a target channel", "Wharf", 400, 401, 403, 404), authHandler(db, wharfHandlers.ListBuilds), queryParam("target", "Target in username/game form", true), queryParam("channel", "Channel name", true))
 	registerRaw[buildEnvelopeResponse](api, authOperation("get-latest-completed-wharf-build", http.MethodGet, "/wharf/builds/latest", "Get newest completed build for a target channel and user version", "Wharf", 400, 401, 403, 404), authHandler(db, wharfHandlers.GetLatestCompletedBuild), queryParam("target", "Target in username/game form", true), queryParam("channel", "Channel name", true), queryParam("user_version", "Build user version", true))
 	registerRaw[buildEnvelopeResponse](api, authOperation("create-wharf-build", http.MethodPost, "/wharf/builds", "Create a build for a target channel", "Wharf", 400, 401, 403, 404, 413), authHandler(db, wharfHandlers.CreateBuild), requestBody[createBuildRequest]())
 	registerRaw[buildFilesResponse](api, authOperation("list-wharf-build-files", http.MethodGet, "/wharf/builds/{id}/files", "List files for a build", "Wharf", 400, 401, 403, 404), authHandler(db, wharfHandlers.GetBuildFiles))
